--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   ],
   "dependencies": {
     "raf": "^3.3.0",
-    "rgui-ui-base": "^0.2.0-alpha.5"
+    "rgui-ui-base": "^0.2.0"
   },
   "peerDependencies": {
     "regularjs": "^0.4.3"
